--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "vitest run --config ./test/vitest-e2e.config.ts"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
